--- a/layouts/index.html
+++ b/layouts/index.html
@@ -5,103 +5,12 @@
     <p class="profile-description">{{ .Site.Params.description }}</p>
 </div>
 
-<!-- Contenedor mejorado para la animación de iconos -->
-<div class="icons-carousel" aria-hidden="true"> <!-- Hide decorative carousel from screen readers -->
-    <div class="icons-wrapper">
-        <!-- Primer set de iconos -->
-        <a href="https://test-cualesmiip.netlify.app" class="carousel-icon-link" target="_blank" tabindex="-1"> <!-- Added class -->
-            <svg class="link-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2m-3 7h3m-3 4h3m-6-4h.01M9 16h.01" />
-            </svg>
-        </a>
-        <a href="https://test-grafico.netlify.app" class="carousel-icon-link" target="_blank" tabindex="-1"> <!-- Added class -->
-            <svg class="link-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z" />
-            </svg>
-        </a>
-        <a href="https://test-relojdespertador.netlify.app" class="carousel-icon-link" target="_blank" tabindex="-1"> <!-- Added class -->
-            <svg class="link-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" />
-            </svg>
-        </a>
-        <a href="https://test-horamundial.netlify.app" class="carousel-icon-link" target="_blank" tabindex="-1"> <!-- Added class -->
-            <svg class="link-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3.055 11H5a2 2 0 012 2v1a2 2 0 002 2 2 2 0 012 2v2.945M8 3.935V5.5A2.5 2.5 0 0010.5 8h.5a2 2 0 012 2 2 2 0 104 0 2 2 0 012-2h1.064M15 20.488V18a2 2 0 012-2h3.064M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
-            </svg>
-        </a>
-        <a href="https://test-delegaciondns.netlify.app" class="carousel-icon-link" target="_blank" tabindex="-1"> <!-- Added class -->
-            <svg class="link-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 11H5m14 0a2 2 0 012 2v6a2 2 0 01-2 2H5a2 2 0 01-2-2v-6a2 2 0 012-2m14 0V9a2 2 0 00-2-2M5 11V9a2 2 0 012-2m0 0V5a2 2 0 012-2h6a2 2 0 012 2v2M7 7h10" />
-            </svg>
-        </a>
-        <a href="https://test-medidordevelocidad.netlify.app" class="carousel-icon-link" target="_blank" tabindex="-1"> <!-- Added class -->
-            <svg class="link-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z" />
-            </svg>
-        </a>
-        <a href="https://test-macaddresslookup.netlify.app" class="carousel-icon-link" target="_blank" tabindex="-1"> <!-- Added class -->
-            <svg class="link-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-4.35-4.35M10.5 18a7.5 7.5 0 100-15 7.5 7.5 0 000 15z" />
-            </svg>
-        </a>
-        <a href="https://test-calculadoraderedes.netlify.app/" class="carousel-icon-link" target="_blank" tabindex="-1"> <!-- Added class -->
-            <svg class="link-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                <rect x="4" y="4" width="16" height="16" rx="2" ry="2" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" />
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 8h.01M12 8h.01M16 8h.01M8 12h.01M12 12h.01M16 12h.01M8 16h.01M12 16h.01M16 16h.01" />
-            </svg>
-        </a>
-        <a href="https://test-indice.netlify.app/comentarios" class="carousel-icon-link" target="_blank" tabindex="-1"> <!-- Added class -->
-            <svg class="link-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z" />
-            </svg>
-        </a>
-        <!-- Segundo set de iconos (duplicado para bucle continuo) -->
-        <a href="https://test-cualesmiip.netlify.app" class="carousel-icon-link" target="_blank" tabindex="-1"> <!-- Added class -->
-            <svg class="link-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2m-3 7h3m-3 4h3m-6-4h.01M9 16h.01" />
-            </svg>
-        </a>
-        <a href="https://test-grafico.netlify.app" class="carousel-icon-link" target="_blank" tabindex="-1"> <!-- Added class -->
-            <svg class="link-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z" />
-            </svg>
-        </a>
-        <a href="https://test-relojdespertador.netlify.app" class="carousel-icon-link" target="_blank" tabindex="-1"> <!-- Added class -->
-            <svg class="link-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" />
-            </svg>
-        </a>
-        <a href="https://test-horamundial.netlify.app" class="carousel-icon-link" target="_blank" tabindex="-1"> <!-- Added class -->
-            <svg class="link-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3.055 11H5a2 2 0 012 2v1a2 2 0 002 2 2 2 0 012 2v2.945M8 3.935V5.5A2.5 2.5 0 0010.5 8h.5a2 2 0 012 2 2 2 0 104 0 2 2 0 012-2h1.064M15 20.488V18a2 2 0 012-2h3.064M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
-            </svg>
-        </a>
-        <a href="https://test-delegaciondns.netlify.app" class="carousel-icon-link" target="_blank" tabindex="-1"> <!-- Added class -->
-            <svg class="link-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 11H5m14 0a2 2 0 012 2v6a2 2 0 01-2 2H5a2 2 0 01-2-2v-6a2 2 0 012-2m14 0V9a2 2 0 00-2-2M5 11V9a2 2 0 012-2m0 0V5a2 2 0 012-2h6a2 2 0 012 2v2M7 7h10" />
-            </svg>
-        </a>
-        <a href="https://test-medidordevelocidad.netlify.app" class="carousel-icon-link" target="_blank" tabindex="-1"> <!-- Added class -->
-            <svg class="link-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z" />
-            </svg>
-        </a>
-        <a href="https://test-macaddresslookup.netlify.app" class="carousel-icon-link" target="_blank" tabindex="-1"> <!-- Added class -->
-            <svg class="link-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-4.35-4.35M10.5 18a7.5 7.5 0 100-15 7.5 7.5 0 000 15z" />
-            </svg>
-        </a>
-        <a href="https://test-calculadoraderedes.netlify.app/" class="carousel-icon-link" target="_blank" tabindex="-1"> <!-- Added class -->
-            <svg class="link-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                <rect x="4" y="4" width="16" height="16" rx="2" ry="2" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" />
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 8h.01M12 8h.01M16 8h.01M8 12h.01M12 12h.01M16 12h.01M8 16h.01M12 16h.01M16 16h.01" />
-            </svg>
-        </a>
-        <a href="https://test-indice.netlify.app/comentarios" class="carousel-icon-link" target="_blank" tabindex="-1"> <!-- Added class -->
-            <svg class="link-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z" />
-            </svg>
-        </a>
+<!-- Nuevo carrusel circular con loop perfecto -->
+<div class="icons-carousel" aria-hidden="true">
+    <div class="carousel-track">
+        <div class="carousel-track-inner" id="carousel-track">
+            <!-- Los iconos se generarán dinámicamente con JavaScript -->
+        </div>
     </div>
 </div>
 
@@ -133,7 +42,7 @@
 
     <a href="https://test-horamundial.netlify.app" class="link-card" target="_blank">
         <svg class="link-icon" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3.055 11H5a2 2 0 012 2v1a2 2 0 002 2 2 2 0 012 2v2.945M8 3.935V5.5A2.5 2.5 0 0010.5 8h.5a2 2 0 012 2 2 2 0 104 0 2 2 0 012-2h1.064M15 20.488V18a2 2 0 012-2h3.064M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3.055 11H5a2 2 0 012 2v1a2 2 0 002 2a2 2 0 012 2v2.945M8 3.935V5.5A2.5 2.5 0 0010.5 8h.5a2 2 0 012 2a2 2 0 104 0a2 2 0 012-2h1.064M15 20.488V18a2 2 0 012-2h3.064M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
         </svg>
         <span class="link-title">Hora Mundial</span>
         <span class="link-arrow" aria-hidden="true">→</span>
@@ -181,4 +90,80 @@
         <span class="link-arrow" aria-hidden="true">→</span>
     </a>
 </div>
+
+<script>
+// Información de los iconos y sus enlaces
+const iconData = [
+    {
+        url: "https://test-cualesmiip.netlify.app",
+        svg: '<svg class="link-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2m-3 7h3m-3 4h3m-6-4h.01M9 16h.01" /></svg>'
+    },
+    {
+        url: "https://test-grafico.netlify.app",
+        svg: '<svg class="link-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z" /></svg>'
+    },
+    {
+        url: "https://test-relojdespertador.netlify.app",
+        svg: '<svg class="link-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>'
+    },
+    {
+        url: "https://test-horamundial.netlify.app",
+        svg: '<svg class="link-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3.055 11H5a2 2 0 012 2v1a2 2 0 002 2 2 2 0 012 2v2.945M8 3.935V5.5A2.5 2.5 0 0010.5 8h.5a2 2 0 012 2 2 2 0 104 0 2 2 0 012-2h1.064M15 20.488V18a2 2 0 012-2h3.064M21 12a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>'
+    },
+    {
+        url: "https://test-delegaciondns.netlify.app",
+        svg: '<svg class="link-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 11H5m14 0a2 2 0 012 2v6a2 2 0 01-2 2H5a2 2 0 01-2-2v-6a2 2 0 012-2m14 0V9a2 2 0 00-2-2M5 11V9a2 2 0 012-2m0 0V5a2 2 0 012-2h6a2 2 0 012 2v2M7 7h10" /></svg>'
+    },
+    {
+        url: "https://test-medidordevelocidad.netlify.app",
+        svg: '<svg class="link-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z" /></svg>'
+    },
+    {
+        url: "https://test-macaddresslookup.netlify.app",
+        svg: '<svg class="link-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-4.35-4.35M10.5 18a7.5 7.5 0 100-15 7.5 7.5 0 000 15z" /></svg>'
+    },
+    {
+        url: "https://test-calculadoraderedes.netlify.app/",
+        svg: '<svg class="link-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><rect x="4" y="4" width="16" height="16" rx="2" ry="2" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" /><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 8h.01M12 8h.01M16 8h.01M8 12h.01M12 12h.01M16 12h.01M8 16h.01M12 16h.01M16 16h.01" /></svg>'
+    },
+    {
+        url: "https://test-indice.netlify.app/comentarios",
+        svg: '<svg class="link-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z" /></svg>'
+    }
+];
+
+function initializeCarousel() {
+    const carouselTrack = document.getElementById('carousel-track');
+    const containerWidth = document.querySelector('.icons-carousel').offsetWidth;
+    
+    // Crea un conjunto de iconos con suficiente amplitud para cubrir dos veces el ancho del contenedor
+    let iconsHTML = '';
+    
+    // Repetir los iconos suficientes veces para garantizar que cubran el ancho del carrusel
+    const repetitions = Math.ceil((containerWidth * 2) / (70 * iconData.length)) + 1;
+    
+    for (let i = 0; i < repetitions; i++) {
+        iconData.forEach(icon => {
+            iconsHTML += `<a href="${icon.url}" class="carousel-icon-link" target="_blank" tabindex="-1">${icon.svg}</a>`;
+        });
+    }
+    
+    carouselTrack.innerHTML = iconsHTML;
+    
+    // Ajustar el ancho y la animación para crear un bucle perfecto
+    const trackWidth = carouselTrack.scrollWidth;
+    const iconWidth = trackWidth / (iconData.length * repetitions);
+    const cloneCount = Math.ceil(containerWidth / iconWidth);
+    
+    // La animación funciona moviendo exactamente la mitad del contenido
+    // Esto garantiza que cuando termine la primera mitad, la segunda mitad
+    // estará exactamente en la misma posición, creando un loop perfecto
+    document.documentElement.style.setProperty('--icon-track-width', `${trackWidth}px`);
+}
+
+// Inicializar el carrusel cuando la página termine de cargar
+window.addEventListener('load', initializeCarousel);
+// Reinicializar si cambia el tamaño de la ventana
+window.addEventListener('resize', initializeCarousel);
+</script>
 {{ end }}
