--- a/layouts/index.html
+++ b/layouts/index.html
@@ -5,17 +5,59 @@
     <p class="profile-description">{{ .Site.Params.description }}</p>
 </div>
 
-<!-- Nuevo carrusel circular con loop perfecto -->
-<div class="icons-carousel" aria-hidden="true">
-    <div class="carousel-track">
-        <div class="carousel-track-inner" id="carousel-track">
-            <!-- Los iconos se generarán dinámicamente con JavaScript -->
-        </div>
+<!-- Nuevo carrusel circular de iconos -->
+<div class="rotary-container" aria-hidden="true">
+    <div class="icons-rotary">
+        <a href="https://test-cualesmiip.netlify.app" class="rotary-item" style="transform: rotate(0deg) translate(100px) rotate(-0deg);" target="_blank" tabindex="-1">
+            <svg class="link-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2m-3 7h3m-3 4h3m-6-4h.01M9 16h.01" />
+            </svg>
+        </a>
+        <a href="https://test-grafico.netlify.app" class="rotary-item" style="transform: rotate(40deg) translate(100px) rotate(-40deg);" target="_blank" tabindex="-1">
+            <svg class="link-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z" />
+            </svg>
+        </a>
+        <a href="https://test-relojdespertador.netlify.app" class="rotary-item" style="transform: rotate(80deg) translate(100px) rotate(-80deg);" target="_blank" tabindex="-1">
+            <svg class="link-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" />
+            </svg>
+        </a>
+        <a href="https://test-horamundial.netlify.app" class="rotary-item" style="transform: rotate(120deg) translate(100px) rotate(-120deg);" target="_blank" tabindex="-1">
+            <svg class="link-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3.055 11H5a2 2 0 012 2v1a2 2 0 002 2 2 2 0 012 2v2.945M8 3.935V5.5A2.5 2.5 0 0010.5 8h.5a2 2 0 012 2 2 2 0 104 0 2 2 0 012-2h1.064M15 20.488V18a2 2 0 012-2h3.064M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+            </svg>
+        </a>
+        <a href="https://test-delegaciondns.netlify.app" class="rotary-item" style="transform: rotate(160deg) translate(100px) rotate(-160deg);" target="_blank" tabindex="-1">
+            <svg class="link-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 11H5m14 0a2 2 0 012 2v6a2 2 0 01-2 2H5a2 2 0 01-2-2v-6a2 2 0 012-2m14 0V9a2 2 0 00-2-2M5 11V9a2 2 0 012-2m0 0V5a2 2 0 012-2h6a2 2 0 012 2v2M7 7h10" />
+            </svg>
+        </a>
+        <a href="https://test-medidordevelocidad.netlify.app" class="rotary-item" style="transform: rotate(200deg) translate(100px) rotate(-200deg);" target="_blank" tabindex="-1">
+            <svg class="link-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z" />
+            </svg>
+        </a>
+        <a href="https://test-macaddresslookup.netlify.app" class="rotary-item" style="transform: rotate(240deg) translate(100px) rotate(-240deg);" target="_blank" tabindex="-1">
+            <svg class="link-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-4.35-4.35M10.5 18a7.5 7.5 0 100-15 7.5 7.5 0 000 15z" />
+            </svg>
+        </a>
+        <a href="https://test-calculadoraderedes.netlify.app/" class="rotary-item" style="transform: rotate(280deg) translate(100px) rotate(-280deg);" target="_blank" tabindex="-1">
+            <svg class="link-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <rect x="4" y="4" width="16" height="16" rx="2" ry="2" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" />
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 8h.01M12 8h.01M16 8h.01M8 12h.01M12 12h.01M16 12h.01M8 16h.01M12 16h.01M16 16h.01" />
+            </svg>
+        </a>
+        <a href="https://test-indice.netlify.app/comentarios" class="rotary-item" style="transform: rotate(320deg) translate(100px) rotate(-320deg);" target="_blank" tabindex="-1">
+            <svg class="link-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z" />
+            </svg>
+        </a>
     </div>
 </div>
 
 <div class="links-container">
-    <!-- Links con texto descriptivo (ya accesibles) -->
     <a href="https://test-cualesmiip.netlify.app" class="link-card" target="_blank">
         <svg class="link-icon" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2m-3 7h3m-3 4h3m-6-4h.01M9 16h.01" />
@@ -42,7 +84,7 @@
 
     <a href="https://test-horamundial.netlify.app" class="link-card" target="_blank">
         <svg class="link-icon" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3.055 11H5a2 2 0 012 2v1a2 2 0 002 2a2 2 0 012 2v2.945M8 3.935V5.5A2.5 2.5 0 0010.5 8h.5a2 2 0 012 2a2 2 0 104 0a2 2 0 012-2h1.064M15 20.488V18a2 2 0 012-2h3.064M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3.055 11H5a2 2 0 012 2v1a2 2 0 002 2 2 2 0 012 2v2.945M8 3.935V5.5A2.5 2.5 0 0010.5 8h.5a2 2 0 012 2 2 2 0 104 0 2 2 0 012-2h1.064M15 20.488V18a2 2 0 012-2h3.064M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
         </svg>
         <span class="link-title">Hora Mundial</span>
         <span class="link-arrow" aria-hidden="true">→</span>
@@ -82,7 +124,7 @@
     </a>
 
     <!-- Enlace a comentarios -->
-    <a href="/comentarios" class="link-card"> <!-- No target="_blank" for internal link -->
+    <a href="/comentarios" class="link-card">
         <svg class="link-icon" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z" />
         </svg>
@@ -90,148 +132,5 @@
         <span class="link-arrow" aria-hidden="true">→</span>
     </a>
 </div>
-
-<!-- Selector de animación -->
-<div class="animation-selector">
-    <button id="linear-animation" class="animation-button active">Animación Lineal</button>
-    <button id="wheel-animation" class="animation-button">Animación Ruleta</button>
-</div>
-
-<script>
-// Información de los iconos y sus enlaces
-const iconData = [
-    {
-        url: "https://test-cualesmiip.netlify.app",
-        svg: '<svg class="link-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2m-3 7h3m-3 4h3m-6-4h.01M9 16h.01" /></svg>'
-    },
-    {
-        url: "https://test-grafico.netlify.app",
-        svg: '<svg class="link-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z" /></svg>'
-    },
-    {
-        url: "https://test-relojdespertador.netlify.app",
-        svg: '<svg class="link-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>'
-    },
-    {
-        url: "https://test-horamundial.netlify.app",
-        svg: '<svg class="link-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3.055 11H5a2 2 0 012 2v1a2 2 0 002 2 2 2 0 012 2v2.945M8 3.935V5.5A2.5 2.5 0 0010.5 8h.5a2 2 0 012 2 2 2 0 104 0 2 2 0 012-2h1.064M15 20.488V18a2 2 0 012-2h3.064M21 12a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>'
-    },
-    {
-        url: "https://test-delegaciondns.netlify.app",
-        svg: '<svg class="link-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 11H5m14 0a2 2 0 012 2v6a2 2 0 01-2 2H5a2 2 0 01-2-2v-6a2 2 0 012-2m14 0V9a2 2 0 00-2-2M5 11V9a2 2 0 012-2m0 0V5a2 2 0 012-2h6a2 2 0 012 2v2M7 7h10" /></svg>'
-    },
-    {
-        url: "https://test-medidordevelocidad.netlify.app",
-        svg: '<svg class="link-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z" /></svg>'
-    },
-    {
-        url: "https://test-macaddresslookup.netlify.app",
-        svg: '<svg class="link-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-4.35-4.35M10.5 18a7.5 7.5 0 100-15 7.5 7.5 0 000 15z" /></svg>'
-    },
-    {
-        url: "https://test-calculadoraderedes.netlify.app/",
-        svg: '<svg class="link-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><rect x="4" y="4" width="16" height="16" rx="2" ry="2" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" /><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 8h.01M12 8h.01M16 8h.01M8 12h.01M12 12h.01M16 12h.01M8 16h.01M12 16h.01M16 16h.01" /></svg>'
-    },
-    {
-        url: "https://test-indice.netlify.app/comentarios",
-        svg: '<svg class="link-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z" /></svg>'
-    }
-];
-
-// Variables para controlar el estado de animación
-let currentAnimation = 'linear';
-let animationActive = true;
-
-// Inicializar animación lineal
-function initializeLinearCarousel() {
-    const carouselTrack = document.getElementById('carousel-track');
-    const containerWidth = document.querySelector('.icons-carousel').offsetWidth;
-    
-    // Limpiamos cualquier contenido previo
-    carouselTrack.innerHTML = '';
-    
-    // Creamos el conjunto principal de iconos
-    let iconsHTML = '';
-    iconData.forEach(icon => {
-        iconsHTML += `<a href="${icon.url}" class="carousel-icon-link" target="_blank" tabindex="-1">${icon.svg}</a>`;
-    });
-    
-    // Duplicamos el conjunto de iconos exactamente una vez para crear el loop perfecto
-    carouselTrack.innerHTML = iconsHTML + iconsHTML;
-    
-    // Calculamos el ancho total del conjunto de iconos
-    const iconSetWidth = carouselTrack.scrollWidth / 2;
-    
-    // Aplicamos el estilo para la animación lineal
-    document.documentElement.style.setProperty('--animation-duration', `${iconSetWidth / 50}s`);
-    
-    // Establecemos las clases apropiadas
-    carouselTrack.className = 'carousel-track-inner linear-animation';
-    document.querySelector('.icons-carousel').className = 'icons-carousel linear-mode';
-}
-
-// Inicializar animación de ruleta
-function initializeWheelCarousel() {
-    const carouselTrack = document.getElementById('carousel-track');
-    
-    // Limpiamos cualquier contenido previo y cambiamos la clase
-    carouselTrack.innerHTML = '';
-    carouselTrack.className = 'carousel-track-inner wheel-animation';
-    document.querySelector('.icons-carousel').className = 'icons-carousel wheel-mode';
-    
-    // Creamos los iconos para la ruleta
-    const totalIcons = iconData.length;
-    const angleIncrement = 360 / totalIcons;
-    
-    iconData.forEach((icon, index) => {
-        const angle = index * angleIncrement;
-        const iconElement = document.createElement('a');
-        iconElement.href = icon.url;
-        iconElement.className = 'carousel-icon-link wheel-icon';
-        iconElement.setAttribute('target', '_blank');
-        iconElement.setAttribute('tabindex', '-1');
-        iconElement.style.transform = `rotate(${angle}deg) translateY(-120px) rotate(-${angle}deg)`;
-        iconElement.innerHTML = icon.svg;
-        carouselTrack.appendChild(iconElement);
-    });
-}
-
-// Función para cambiar entre animaciones
-function toggleAnimation(animationType) {
-    if (currentAnimation === animationType) return;
-    
-    currentAnimation = animationType;
-    
-    // Actualizar botones
-    document.querySelectorAll('.animation-button').forEach(btn => {
-        btn.classList.remove('active');
-    });
-    document.getElementById(`${animationType}-animation`).classList.add('active');
-    
-    // Inicializar la animación correspondiente
-    if (animationType === 'linear') {
-        initializeLinearCarousel();
-    } else {
-        initializeWheelCarousel();
-    }
-}
-
-// Inicializar el carrusel cuando la página termine de cargar
-window.addEventListener('load', () => {
-    initializeLinearCarousel();
-    
-    // Configurar los botones de cambio de animación
-    document.getElementById('linear-animation').addEventListener('click', () => toggleAnimation('linear'));
-    document.getElementById('wheel-animation').addEventListener('click', () => toggleAnimation('wheel'));
-});
-
-// Reinicializar si cambia el tamaño de la ventana
-window.addEventListener('resize', () => {
-    if (currentAnimation === 'linear') {
-        initializeLinearCarousel();
-    } else {
-        initializeWheelCarousel();
-    }
-});
-</script>
 {{ end }}
+
