--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -202,7 +202,7 @@
             position: relative;
             width: 250px;
             height: 250px;
-            margin: 0 auto;
+            margin: 2rem auto; /* Modificado para agregar espaciado superior e inferior */
             opacity: 0.7; /* Reduce la opacidad para mejor integración visual */
         }
         .icons-rotary {
