--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -212,7 +212,6 @@
             width: 40px;
             height: 40px;
             top: 50%;
-            transform: translateY(-50%);
             animation: slideIcon 27s infinite linear;
             opacity: 0;
         }
@@ -222,21 +221,26 @@
             filter: drop-shadow(0 0 3px rgba(37, 99, 235, 0.3));
         }
         
-        /* Animación corregida para alinearse con los recuadros */
+        /* Animación corregida para cubrir todo el ancho del contenedor */
         @keyframes slideIcon {
-            0%, 100% { 
-                transform: translate(calc(100% + 40px), -50%);
+            0% { 
+                transform: translate(600px, -50%);
                 opacity: 0;
             }
-            3%, 8% { 
+            3% { 
+                transform: translate(600px, -50%);
+                opacity: 0;
+            }
+            8% { 
                 transform: translate(0, -50%);
                 opacity: 1;
             }
-            11% { 
-                transform: translate(calc(-100% - 40px), -50%); 
+            30% { 
+                transform: translate(-600px, -50%); 
                 opacity: 0;
             }
-            11.1%, 100% { 
+            100% { 
+                transform: translate(-600px, -50%);
                 opacity: 0; 
             }
         }
