--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -196,7 +196,7 @@
             margin-top: 2rem;
         }
 
-        /* Estilos corregidos para animación de iconos */
+        /* Estilos para animación de previews en línea */
         .sliding-icons-container {
             position: relative;
             height: 80px;
@@ -209,19 +209,19 @@
         
         .sliding-icon {
             position: absolute;
-            width: 40px;
-            height: 40px;
+            width: 120px;
+            height: 80px;
             top: 50%;
             animation: slideIcon 27s infinite linear;
             opacity: 0;
         }
         
-        .sliding-icon svg {
-            color: var(--primary-color);
-            filter: drop-shadow(0 0 3px rgba(37, 99, 235, 0.3));
+        .sliding-icon iframe {
+            width: 100%;
+            height: 100%;
+            border: none;
         }
         
-        /* Animación corregida para cubrir todo el ancho del contenedor */
         @keyframes slideIcon {
             0% { 
                 transform: translate(600px, -50%);
@@ -245,7 +245,7 @@
             }
         }
         
-        /* Aplicar retardo a cada icono */
+        /* Aplicar retardo a cada preview */
         .sliding-icon:nth-child(1) { animation-delay: 0s; }
         .sliding-icon:nth-child(2) { animation-delay: 3s; }
         .sliding-icon:nth-child(3) { animation-delay: 6s; }
@@ -265,4 +265,3 @@
     {{ partial "footer" . }}
 </body>
 </html>
-
