--- a/layouts/index.html
+++ b/layouts/index.html
@@ -63,6 +63,13 @@
         <span class="link-title">Calculadora de Redes</span>
         <span class="link-arrow" aria-hidden="true">→</span>
     </a>
+    <a href="https://edgardavid1000.github.io/test-calculadoradefechas/" class="link-card" target="_blank">
+        <svg class="link-icon" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z" />
+        </svg>
+        <span class="link-title">Calculadora de Fechas</span>
+        <span class="link-arrow" aria-hidden="true">→</span>
+    </a>
     <a href="https://test-comentarios.netlify.app" class="link-card" target="_blank">
         <svg class="link-icon" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z" />
@@ -87,6 +94,7 @@
     "https://test-medidordevelocidad.netlify.app",
     "https://test-macaddresslookup.netlify.app",
     "https://test-calculadoraderedes.netlify.app/",
+    "https://edgardavid1000.github.io/test-calculadoradefechas/",
     "https://test-comentarios.netlify.app"
   ];
   let currentIndex = 0;
@@ -96,5 +104,3 @@
   }, 5000);
 </script>
 {{ end }}
-
-
